backend major update - finance, social, profile improvements